--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "now-dev": "webpack-dev-server",
+    "now-dev": "webpack-dev-server --open",
     "now-build": "webpack --mode=production"
   },
   "dependencies": {
