--- a/package.json
+++ b/package.json
@@ -96,6 +96,8 @@
     "rules": {
       "@typescript-eslint/explicit-function-return-type": 0,
       "promise/always-return": 0,
+      "react/display-name": 0,
+      "react/prop-types": 0,
       "react-hooks/rules-of-hooks": "error",
       "react-hooks/exhaustive-deps": "warn"
     },
