--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@typescript-eslint/parser": "^1.12.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^3.0.0",
     "eslint": "^6.0.1",
     "eslint-config-prettier": "^6.0.0",
