--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "file-saver": "^2.0.2",
     "jszip": "^3.2.2",
     "monaco-editor": "^0.17.1",
+    "monaco-themes": "^0.3.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.5",
