--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "file-saver": "^2.0.2",
+    "file-type": "^12.0.1",
     "jszip": "^3.2.2",
     "monaco-editor": "^0.17.1",
     "monaco-themes": "^0.3.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-dropzone": "^10.1.5",
-    "workbox-webpack-plugin": "^4.3.1"
+    "react-dropzone": "^10.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
@@ -50,7 +50,8 @@
     "typescript": "3.5.3",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2"
+    "webpack-dev-server": "^3.7.2",
+    "workbox-webpack-plugin": "^4.3.1"
   },
   "babel": {
     "presets": [
