--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "now-build": "webpack --mode=production"
   },
   "dependencies": {
+    "balloon-css": "^1.0.3",
     "classnames": "^2.2.6",
     "file-saver": "^2.0.2",
     "file-type": "^12.0.1",
