--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "monaco-themes": "^0.3.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-dropzone": "^10.1.5"
+    "react-dropzone": "^10.1.5",
+    "resize-observer-polyfill": "^1.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
