--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.6",
+    "react-split": "^2.0.7",
     "resize-observer-polyfill": "^1.5.1"
   },
   "devDependencies": {
