--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "now-build": "webpack --mode=production"
   },
   "dependencies": {
+    "@types/workbox-window": "^4.3.1",
     "balloon-css": "^1.0.3",
     "classnames": "^2.2.6",
     "file-saver": "^2.0.2",
@@ -19,7 +20,8 @@
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.6",
     "react-split": "^2.0.7",
-    "resize-observer-polyfill": "^1.5.1"
+    "resize-observer-polyfill": "^1.5.1",
+    "workbox-window": "^4.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
