--- a/package.json
+++ b/package.json
@@ -16,47 +16,48 @@
     "jszip": "^3.2.2",
     "monaco-editor": "^0.17.1",
     "monaco-themes": "^0.3.3",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-dropzone": "^10.1.6",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-dropzone": "^10.1.7",
     "react-split": "^2.0.7",
     "resize-observer-polyfill": "^1.5.1",
     "workbox-window": "^4.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@types/classnames": "^2.2.9",
     "@types/file-saver": "^2.0.1",
-    "@types/jest": "24.0.15",
+    "@types/jest": "24.0.17",
     "@types/jszip": "^3.1.6",
-    "@types/node": "12.6.8",
+    "@types/node": "12.7.2",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.5",
-    "@types/workbox-window": "^4.3.1",
-    "@typescript-eslint/eslint-plugin": "^1.13.0",
-    "@typescript-eslint/parser": "^1.13.0",
+    "@types/workbox-window": "^4.3.2",
+    "@typescript-eslint/eslint-plugin": "^2.0.0",
+    "@typescript-eslint/parser": "^2.0.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.3",
-    "css-loader": "^3.1.0",
+    "copy-webpack-plugin": "^5.0.4",
+    "css-loader": "^3.2.0",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^1.6.1",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "monaco-editor-webpack-plugin": "^1.7.0",
     "prettier": "^1.18.2",
-    "style-loader": "^0.23.1",
+    "style-loader": "^1.0.0",
     "typescript": "3.5.3",
-    "webpack": "^4.37.0",
+    "webpack": "^4.39.2",
     "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2",
+    "webpack-dev-server": "^3.8.0",
     "workbox-webpack-plugin": "^4.3.1"
   },
   "babel": {
@@ -64,6 +65,9 @@
       "@babel/env",
       "@babel/react",
       "@babel/typescript"
+    ],
+    "plugins": [
+      "@babel/proposal-class-properties"
     ]
   },
   "browserslist": [
