--- a/package.json
+++ b/package.json
@@ -1,64 +1,67 @@
 {
   "name": "zipadee",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "license": "MIT",
   "repository": "hubgit/zipadee",
   "scripts": {
-    "now-dev": "webpack-dev-server --port $PORT",
-    "now-build": "webpack --mode=production"
+    "dev": "webpack-dev-server --port $PORT",
+    "build": "webpack --mode=production",
+    "lint": "eslint 'src/**/*.{ts,tsx}'",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "balloon-css": "^1.0.3",
+    "balloon-css": "^1.2.0",
     "classnames": "^2.2.6",
     "file-saver": "^2.0.2",
-    "file-type": "^12.1.0",
-    "jszip": "^3.2.2",
-    "monaco-editor": "^0.17.1",
+    "file-type": "^15.0.0",
+    "jszip": "^3.5.0",
+    "monaco-editor": "^0.20.0",
     "monaco-themes": "^0.3.3",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-dropzone": "^10.1.7",
-    "react-split": "^2.0.7",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-dropzone": "^11.0.3",
+    "react-split": "^2.0.9",
     "resize-observer-polyfill": "^1.5.1",
-    "workbox-window": "^4.3.1"
+    "workbox-window": "^5.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.3.3",
-    "@types/classnames": "^2.2.9",
+    "@babel/core": "^7.11.4",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
+    "@types/classnames": "^2.2.10",
     "@types/file-saver": "^2.0.1",
-    "@types/jest": "24.0.17",
-    "@types/jszip": "^3.1.6",
-    "@types/node": "12.7.2",
-    "@types/react": "16.8.23",
-    "@types/react-dom": "16.8.5",
-    "@types/workbox-window": "^4.3.2",
-    "@typescript-eslint/eslint-plugin": "^2.0.0",
-    "@typescript-eslint/parser": "^2.0.0",
-    "babel-loader": "^8.0.6",
+    "@types/jest": "26.0.10",
+    "@types/jszip": "^3.4.1",
+    "@types/node": "14.6.2",
+    "@types/react": "16.9.48",
+    "@types/react-dom": "16.9.8",
+    "@types/workbox-window": "^4.3.3",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
+    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.4",
-    "css-loader": "^3.2.0",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-prettier": "^3.1.0",
+    "copy-webpack-plugin": "^6.0.4",
+    "css-loader": "^4.2.2",
+    "eslint": "^7.7.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "html-webpack-plugin": "^3.2.0",
-    "monaco-editor-webpack-plugin": "^1.7.0",
-    "prettier": "^1.18.2",
-    "style-loader": "^1.0.0",
-    "typescript": "3.5.3",
-    "webpack": "^4.39.2",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.8.0",
-    "workbox-webpack-plugin": "^4.3.1"
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.0",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
+    "monaco-editor-webpack-plugin": "^1.9.0",
+    "prettier": "^2.1.1",
+    "style-loader": "^1.2.1",
+    "typescript": "4.0.2",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "workbox-webpack-plugin": "^5.1.3"
   },
   "babel": {
     "presets": [
@@ -71,7 +74,7 @@
     ]
   },
   "browserslist": [
-    "last 2 years"
+    "last 2 years and >2%"
   ],
   "prettier": {
     "printWidth": 80,
