--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,6 @@
 {
   "version": 2,
-  "name": "zipadee",
-  "alias": "zipadee",
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@now/static-build"
-    }
-  ],
+  "alias": ["zipadee.now.sh"],
   "routes": [
     {
       "src": "/workers/(.*)",
