Revert "Update vercel.json"
This reverts commit ea841d7a5a54d1f357372168987883221981a526.

--- a/now.json
+++ b/now.json
@@ -1,6 +1,13 @@
 {
   "version": 2,
-  "alias": ["zipadee.now.sh"],
+  "name": "zipadee",
+  "alias": "zipadee",
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@now/static-build"
+    }
+  ],
   "routes": [
     {
       "src": "/workers/(.*)",
