--- a/package.json
+++ b/package.json
@@ -5,63 +5,66 @@
   "license": "MIT",
   "repository": "hubgit/zipadee",
   "scripts": {
-    "dev": "webpack-dev-server --port $PORT",
+    "dev": "webpack serve --mode development --env development",
     "build": "webpack --mode=production",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "assert": "^2.0.0",
     "balloon-css": "^1.2.0",
+    "browser-nativefs": "^0.11.1",
+    "buffer": "^6.0.3",
     "classnames": "^2.2.6",
-    "file-saver": "^2.0.2",
-    "file-type": "^15.0.0",
-    "jszip": "^3.5.0",
-    "monaco-editor": "^0.20.0",
+    "image-type": "^4.1.0",
+    "jszip": "3.2.0",
+    "monaco-editor": "^0.21.2",
     "monaco-themes": "^0.3.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-dropzone": "^11.0.3",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-dropzone": "^11.2.4",
     "react-split": "^2.0.9",
     "resize-observer-polyfill": "^1.5.1",
-    "workbox-window": "^5.1.3"
+    "stream-browserify": "^3.0.0",
+    "workbox-window": "^6.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.4",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/preset-env": "^7.11.0",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/preset-typescript": "^7.10.4",
-    "@types/classnames": "^2.2.10",
-    "@types/file-saver": "^2.0.1",
-    "@types/jest": "26.0.10",
-    "@types/jszip": "^3.4.1",
-    "@types/node": "14.6.2",
-    "@types/react": "16.9.48",
-    "@types/react-dom": "16.9.8",
+    "@babel/core": "^7.12.9",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-react": "^7.12.7",
+    "@babel/preset-typescript": "^7.12.7",
+    "@types/classnames": "^2.2.11",
+    "@types/jest": "26.0.16",
+    "@types/jszip": "^3.1.7",
+    "@types/node": "14.14.10",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "17.0.0",
+    "@types/wicg-native-file-system": "^2020.6.0",
     "@types/workbox-window": "^4.3.3",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^3.10.1",
-    "babel-loader": "^8.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.0.4",
-    "css-loader": "^4.2.2",
-    "eslint": "^7.7.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "copy-webpack-plugin": "^6.3.2",
+    "css-loader": "^5.0.1",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^4.1.0",
-    "file-loader": "^6.0.0",
-    "html-webpack-plugin": "^4.3.0",
-    "monaco-editor-webpack-plugin": "^1.9.0",
-    "prettier": "^2.1.1",
-    "style-loader": "^1.2.1",
-    "typescript": "4.0.2",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "workbox-webpack-plugin": "^5.1.3"
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.5.0",
+    "monaco-editor-webpack-plugin": "^2.0.0",
+    "prettier": "^2.2.1",
+    "style-loader": "^2.0.0",
+    "typescript": "4.1.2",
+    "webpack": "^5.10.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^4.0.0-beta.0",
+    "workbox-webpack-plugin": "^6.0.2"
   },
   "babel": {
     "presets": [
