--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "monaco-themes": "^0.3.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-dropzone": "^11.2.4",
     "react-split": "^2.0.9",
     "resize-observer-polyfill": "^1.5.1",
     "stream-browserify": "^3.0.0",
@@ -34,6 +33,7 @@
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
     "@babel/preset-typescript": "^7.12.7",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@types/classnames": "^2.2.11",
     "@types/jest": "26.0.16",
     "@types/jszip": "^3.1.7",
@@ -59,7 +59,9 @@
     "html-webpack-plugin": "^4.5.0",
     "monaco-editor-webpack-plugin": "^2.0.0",
     "prettier": "^2.2.1",
+    "react-refresh": "^0.9.0",
     "style-loader": "^2.0.0",
+    "type-fest": "^0.20.2",
     "typescript": "4.1.2",
     "webpack": "^5.10.0",
     "webpack-cli": "^4.2.0",
