--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": "hubgit/zipadee",
   "scripts": {
     "dev": "webpack serve --mode development --env development",
-    "build": "webpack --mode=production",
+    "build": "NODE_ENV=production webpack --mode=production",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
     "typecheck": "tsc --noEmit"
   },
