--- a/package.json
+++ b/package.json
@@ -13,19 +13,19 @@
   "dependencies": {
     "assert": "^2.0.0",
     "balloon-css": "^1.2.0",
-    "browser-nativefs": "^0.11.1",
+    "browser-fs-access": "^0.20.5",
     "buffer": "^6.0.3",
-    "classnames": "^2.2.6",
+    "classnames": "^2.3.1",
     "image-type": "^4.1.0",
-    "jszip": "3.2.0",
-    "monaco-editor": "^0.21.2",
+    "jszip": "3.7.1",
+    "monaco-editor": "^0.28.1",
     "monaco-themes": "^0.3.3",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-split": "^2.0.9",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-split": "^2.0.13",
     "resize-observer-polyfill": "^1.5.1",
     "stream-browserify": "^3.0.0",
-    "workbox-window": "^6.0.2"
+    "workbox-window": "^6.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -33,39 +33,39 @@
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
     "@babel/preset-typescript": "^7.12.7",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.1",
     "@types/classnames": "^2.2.11",
-    "@types/jest": "26.0.16",
-    "@types/jszip": "^3.1.7",
-    "@types/node": "14.14.10",
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
+    "@types/jest": "27.0.2",
+    "@types/jszip": "^3.4.1",
+    "@types/node": "16.10.3",
+    "@types/react": "17.0.27",
+    "@types/react-dom": "17.0.9",
     "@types/wicg-native-file-system": "^2020.6.0",
     "@types/workbox-window": "^4.3.3",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
     "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.3.2",
-    "css-loader": "^5.0.1",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^6.3.0",
     "eslint": "^7.15.0",
-    "eslint-config-prettier": "^7.0.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.2.0",
-    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^4.5.0",
-    "monaco-editor-webpack-plugin": "^2.0.0",
+    "html-webpack-plugin": "^5.3.2",
+    "monaco-editor-webpack-plugin": "^4.2.0",
     "prettier": "^2.2.1",
-    "react-refresh": "^0.9.0",
-    "style-loader": "^2.0.0",
-    "type-fest": "^0.20.2",
-    "typescript": "4.1.2",
+    "react-refresh": "^0.10.0",
+    "style-loader": "^3.3.0",
+    "type-fest": "^2.3.4",
+    "typescript": "4.4.3",
     "webpack": "^5.10.0",
     "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^4.0.0-beta.0",
+    "webpack-dev-server": "^4.3.1",
     "workbox-webpack-plugin": "^6.0.2"
   },
   "babel": {
