--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
     ],
     "extends": [
       "plugin:@typescript-eslint/recommended",
-      "prettier/@typescript-eslint",
+      "prettier",
       "plugin:prettier/recommended",
       "plugin:react/recommended",
       "plugin:promise/recommended",
