--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/node": "16.10.3",
     "@types/react": "17.0.27",
     "@types/react-dom": "17.0.9",
+    "@types/wicg-file-system-access": "^2020.9.5",
     "@types/wicg-native-file-system": "^2020.6.0",
     "@types/workbox-window": "^4.3.3",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
@@ -62,7 +63,7 @@
     "react-refresh": "^0.10.0",
     "style-loader": "^3.3.0",
     "type-fest": "^2.3.4",
-    "typescript": "4.4.3",
+    "typescript": "^4.7.2",
     "webpack": "^5.10.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^4.3.1",
